# server/swagger/swagger.yaml
@@ -2419,7 +2419,8 @@ paths:
         name: Authorization
         required: true
         type: string
-      - in: query
+      - description: 用户ID
+        in: query
         name: id
         type: integer
       - description: 页码
@@ -2430,6 +2431,11 @@ paths:
         in: query
         name: page_size
         type: integer
+      - description: 年月，如：2006_01
+        in: query
+        name: string
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -2450,6 +2456,37 @@ paths:
           schema:
             $ref: '#/definitions/api.Response'
       summary: 获取用户操作记录
+      tags:
+      - 用户相关
+  /api/v1/user/action-log/exist-date:
+    get:
+      description: 查询有多少个月份表可供查询
+      parameters:
+      - description: 格式为：Bearer 用户令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"data":{},"meta":{msg":"Success"}}'
+          schema:
+            $ref: '#/definitions/api.Response'
+        "401":
+          description: '{"data":{}, "meta":{"msg":"错误信息", "error":"错误格式输出(如存在)"}}'
+          schema:
+            $ref: '#/definitions/api.Response'
+        "403":
+          description: '{"data":{}, "meta":{"msg":"错误信息", "error":"错误格式输出(如存在)"}}'
+          schema:
+            $ref: '#/definitions/api.Response'
+        "500":
+          description: '{"data":{}, "meta":{"msg":"错误信息", "error":"错误格式输出(如存在)"}}'
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: 获取用户可查询操作记录的日期
       tags:
       - 用户相关
   /api/v1/user/ass-group:
